--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.9",
     "antd": "^5.18.0",
     "axios": "^1.6.5",
+    "d3": "^7.9.0",
+    "framer-motion": "^11.11.0",
+    "lucide-react": "^0.447.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.27.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-pdf": "^9.0.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
