--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
 MONGO_URI='mongodb+srv://shuvrocadet:WuMwMvBNh5sKtbF4@cluster0.gkqwt8f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://pacexplorer-j6sj.onrender.com
 JWT_SECRET_KEY=gjegerjgbherbhgbherbg
 JWT_EXPIRES='7d'
 COOKIE_EXPIRE=5
